single header spacing fix

--- a/assets/styles/theme/_theme.scss
+++ b/assets/styles/theme/_theme.scss
@@ -60,6 +60,10 @@ body {
 	.page-template-default .page .entry-content .container {
 		width: 100%;
 	}
+
+	.single .entry-image {
+		margin-top: 30px;
+	}
 }
 
 @media only screen and (min-width: 992px) {
@@ -78,7 +82,7 @@ body {
 	}
 
 	.single .entry-image {
-		margin: 0px auto;
+		margin: 30px auto 0px auto;
 	}
 
 	.single .entry-header {
